# poseidon-archive

./: .gitignore  .gitmodules  .travis.yml  LICENSE  Makefile  Makefile.am  Makefile.in  README  README.md  check_includes.sh  clean_database_dump.sh  clean_sql_dump.sh  configure  configure.ac  description-pak  etc  gdb.sh  libtool  makedeb.sh  reconfig_debug.sh  reconfig_debug_cxx11.sh  reconfig_debug_cxx98.sh  reconfig_opt_debug_cxx11.sh  reconfig_opt_debug_cxx98.sh  reconfig_optimized_debug_cxx11.sh  reconfig_optimized_debug_cxx98.sh  reconfig_release.sh  reconfig_release_cxx11.sh  reconfig_release_cxx98.sh  reconfig_sanitized_debug_cxx11.sh  reconfig_sanitized_debug_cxx98.sh  rocket  run.sh  run_server.sh  src  update_asteria.sh  update_submodule.sh  var
DEBIAN/: conffiles  control
addon/: Makefile.inc.am  example_fiber.cpp  example_ssl_client.cpp  example_ssl_echo.cpp  example_tcp_client.cpp  example_tcp_echo.cpp  example_timer.cpp  example_timer_fiber.cpp  example_tls_echo.cpp  example_udp_echo.cpp
ci/: build.sh  check_includes.sh
config/: conf.rc  poseidon.conf
etc/: main.conf  poseidon
etc/poseidon/: Makefile.inc.am  main-template.conf  main.conf  main.default.conf
example/: Makefile.inc.am  fiber.cpp  ssl_client.cpp  ssl_echo.cpp  tcp_client.cpp  tcp_echo.cpp  timer.cpp  timer_fiber.cpp  udp_echo.cpp
examples/: README
examples/echo_server/: Makefile.am  configure.ac  mmain.cpp
examples/http_server/: Makefile.am  configure.ac  mmain.cpp  reconfig_opt_debug_cxx11.sh
examples/https_client/: Makefile.am  configure.ac  mmain.cpp  reconfig_release_cxx11.sh
examples/mongodb/: Makefile.am  configure.ac  mmain.cpp
examples/udp_server/: Makefile.am  configure.ac  mmain.cpp
examples/websocket_client/: Makefile.am  configure.ac  mmain.cpp  reconfig_opt_debug_cxx11.sh
examples/websocket_server/: Makefile.am  configure.ac  mmain.cpp
lib/: Makefile.inc.am  libposeidon_example_ssl_client.cpp  libposeidon_example_ssl_echo.cpp  libposeidon_example_tcp_client.cpp  libposeidon_example_tcp_echo.cpp  libposeidon_example_timer.cpp  libposeidon_example_timer_fiber.cpp  libposeidon_example_udp_echo.cpp
old/: Makefile.inc.am  abstract_accept_socket.hpp  abstract_tcp_client_socket.cpp  abstract_tcp_client_socket.hpp  abstract_tcp_socket.cpp  abstract_tcp_socket.hpp  abstract_tls_client_socket.hpp  abstract_tls_socket.cpp  abstract_udp_client_socket.hpp  abstract_udp_server_socket.hpp  abstract_udp_socket.cpp  abstract_udp_socket.hpp  openssl_common.cpp  openssl_context.cpp
old/core/: abstract_fiber.hpp  abstract_future.hpp  abstract_task.cpp  abstract_task.hpp  abstract_timer.cpp  abstract_timer.hpp  config_file.cpp  config_file.hpp  future.hpp  lcg48.hpp
old/socket/: abstract_datagram_socket.cpp  abstract_datagram_socket.hpp  abstract_socket.cpp  abstract_socket.hpp  enums.cpp  socket_address.cpp  socket_address.hpp
old/static/: fiber_scheduler.hpp  main_config.cpp  main_config.hpp  network_driver.cpp  network_driver.hpp  task_executor_pool.cpp  task_executor_pool.hpp  timer_driver.cpp  timer_driver.hpp
poseidon/: Makefile.inc.am  easy_timer.hpp  fwd.cpp  fwd.hpp  main.conf  main.cpp  precompiled.ipp  utils.cpp  utils.hpp  version.h.in
poseidon-0.1/: Makefile.am  configure.ac
poseidon-0.1/src/: async_job.cpp  async_job.hpp  checked_arithmetic.hpp  condition_variable.cpp  condition_variable.hpp  csv_parser.cpp  csv_parser.hpp  endian.hpp  epoll.cpp  epoll.hpp  errno.hpp  event_base.cpp  event_base.hpp  exception.cpp  exception.hpp  file.hpp  flags.hpp  fwd.hpp  hash.cpp  hash.hpp  ip_port.cpp  ip_port.hpp  job_base.hpp  job_promise.hpp  json.cpp  json.hpp  log.cpp  main.cpp  module_config.hpp  module_raii.cpp  module_raii.hpp  multi_index_map.hpp  mutex.cpp  mutex.hpp  optional_map.cpp  optional_map.hpp  profiler.hpp  raii.cpp  random.cpp  random.hpp  (+18 more)
poseidon/addon/: Makefile.inc.am  example_fiber.cpp  example_http_server.cpp  example_tcp_echo.cpp  example_timer.cpp  example_tls_echo.cpp  example_udp_echo.cpp
poseidon/async_task/: abstract_async_task.hpp
poseidon/base/: abstract_async_task.cpp  abstract_async_task.hpp  abstract_timer.cpp  abstract_timer.hpp  charbuf_256.hpp  config_file.cpp  config_file.hpp
poseidon/core/: charbuf_256.hpp  config_file.hpp
poseidon/easy/: easy_timer.cpp  easy_timer.hpp
poseidon/etc/: Makefile.inc.am  main.conf  main.conf.template  main.json5  main.template.conf  main.template.json5
poseidon/fiber/: abstract_fiber.cpp  abstract_fiber.hpp  abstract_future.cpp  abstract_future.hpp  enums.hpp  future.hpp  timer_fiber.cpp
poseidon/socket/: abstract_socket.cpp  abstract_socket.hpp  enums.hpp  listen_socket.cpp  listen_socket.hpp  socket_address.cpp  socket_address.hpp  ssl_ctx_ptr.hpp  ssl_ptr.hpp  ssl_socket.cpp  ssl_socket.hpp  tcp_socket.cpp  tcp_socket.hpp  udp_socket.cpp  udp_socket.hpp
src/: Makefile.inc.am  async_job.cpp  async_job.hpp  atomic.hpp  base64.cpp  base64.hpp  buffer_streams.cpp  buffer_streams.hpp  checked_arithmetic.hpp  condition_variable.cpp  condition_variable.hpp  config_file.cpp  config_file.hpp  crc32.cpp  crc32.hpp  csv_document.cpp  csv_document.hpp  csv_parser.cpp  csv_parser.hpp  cxx_util.hpp  cxx_ver.hpp  cxxver.hpp  dyn_array.hpp  endian.hpp  epoll.cpp  epoll.hpp  errno.cpp  errno.hpp  event_base.cpp  event_base.hpp  exception.cpp  exception.hpp  exit_stubs.c  exit_stubs.cpp  file.cpp  file.hpp  flags.hpp  fwd.cpp  fwd.hpp  fwd.hpp.in  (+109 more)
src-template/: mmain.cpp
src/cbpp/: fwd.hpp  (+21 more)
template-src/: mmain.cpp
template_project/: Makefile.am  configure.ac  reconfig_debug_cxx11.sh  reconfig_opt_debug_cxx98.sh  reconfig_release_cxx98.sh  run_server.sh
template_project/etc/poseidon/: main.conf
template_project/src/: log.hpp  mmain.cpp  mmain.hpp  precompiled.hpp
test/: Makefile.inc.am  http_fields.cpp  socket_address.cpp  utils.cpp  utils.hpp
third/: build_libmongoc_deb.sh  build_libmysqlclient_deb.sh  build_mongo-c-driver_deb.sh  build_mysql-connector-c_deb.sh
utilities/: build.sh  cbpp.js  vint_decode.cpp  vint_encode.cpp  vuint_decode.cpp  vuint_encode.cpp
var/: main.conf
(+986 files in other folders)
