ACLOCAL_AMFLAGS = -I m4
AUTOMAKE_OPTIONS = foreign subdir-objects
AM_CPPFLAGS = -Wall -Wextra -Werror -Wsign-conversion -Wno-error=unused-parameter -Wno-missing-field-initializers -pipe -fPIC -DPIC -pthread
AM_CXXFLAGS =

lib_LTLIBRARIES = \
	lib/libposeidon-example-mongodb.la

lib_libposeidon_example_mongodb_la_SOURCES = \
	mmain.cpp
